--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
             background-size: 400% 400%;
             animation: gradient 15s ease infinite;
-
+        }
         @keyframes gradient {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
-
+        }
     </style>
 </head>
 <body class="bg-slate-50 min-h-screen text-slate-800 flex flex-col">
@@ -440,7 +440,27 @@ Origem: {{ software_a }} -> Destino: {{ software_b }}
 
     </main>
     
-    <script src="assets/js/app.js" defer></script>
+    <!-- Settings Modal -->
+    <div id="settingsModal" class="hidden fixed inset-0 bg-black/50 z-[60] flex items-center justify-center p-4 backdrop-blur-sm">
+        <div class="bg-white rounded-xl shadow-2xl max-w-md w-full p-6 transform transition-all scale-100">
+            <h3 class="text-xl font-bold text-slate-900 mb-4">Configurações</h3>
+            <div class="bg-blue-50 border-l-4 border-blue-500 p-4 mb-6 rounded-r-md">
+                <div class="flex">
+                    <div class="ml-3">
+                        <p class="text-xs text-blue-700"><strong>Segurança (BYOK):</strong> Chave salva apenas no Local Storage do seu navegador.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="mb-4">
+                <label class="block text-sm font-medium text-slate-700 mb-2">Google Gemini API Key</label>
+                <input type="password" id="apiKeyInput" class="w-full p-2 border border-slate-300 rounded focus:ring-2 focus:ring-blue-500 outline-none text-sm" placeholder="Cole sua chave aqui...">
+            </div>
+            <div class="flex justify-end gap-2">
+                <button onclick="closeSettings()" class="px-4 py-2 text-slate-600 hover:bg-slate-100 rounded text-sm">Cancelar</button>
+                <button onclick="saveSettings()" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 text-sm font-medium">Salvar</button>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer SEO -->
     <footer class="bg-white border-t border-slate-200 mt-auto py-12">
