✨ Linkagem e indexação completa de integrações N8N
- Adicionado CTA destacado no index.html para diretório de integrações
- Redesign completo do integracoes/index.html com:
  * SEO otimizado (meta tags, schema.org, canonical URL)
  * Sistema de busca em tempo real com filtro por palavras-chave
  * 21 cards linkados aos guias completos
  * Header com breadcrumb e navegação bidirecional
  * Design responsivo com Tailwind CSS
  * Hero section visual e atrativa
- Criados 3 arquivos de documentação:
  * GUIA_INTEGRACAO.md - Documentação técnica completa
  * RESUMO_ALTERACOES.md - Detalhes de todas as mudanças
  * QUICKSTART.md - Guia rápido de uso

Todas as 21 integrações agora estão:
✅ Linkadas e indexáveis
✅ Otimizadas para SEO
✅ Com navegação clara
✅ Prontas para crescimento

--- a/index.html
+++ b/index.html
@@ -317,6 +317,13 @@ Origem: {{ software_a }} -> Destino: {{ software_b }}
                     <p id="integrations-count" class="text-sm text-slate-500 mb-4"></p>
                     <button onclick="loadMoreIntegrations()" id="load-more-btn" class="hidden px-6 py-2 bg-slate-100 text-slate-600 rounded-full hover:bg-slate-200 transition-colors font-medium text-sm">Carregar Mais</button>
                 </div>
+
+                <div class="text-center mt-12 pt-8 border-t border-slate-200">
+                    <p class="text-slate-600 mb-4">💡 <strong>Procurando tutoriais passo a passo?</strong></p>
+                    <a href="integracoes/index.html" class="inline-block px-6 py-3 bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition-colors font-medium">
+                        Ver Guias de Integrações Completos →
+                    </a>
+                </div>
             </div>
         </section>
 
